--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <img src="img/logo.png" width="200px" alt="">
         </div>
         <ul class="navMenu_links">
-            <li><a href="#">Link1</a></li>
-            <li><a href="#">Link2</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Tendencias</a></li>
             <li><a href="#">Link3</a></li>
             <li><a href="#">Link4</a></li>
         </ul>
@@ -27,9 +27,8 @@
             <div class="navMenu_line"></div>
         </label>
     </nav>
-
-    <div class="navMenu_container">
-
+    <div id='show_bg_2'>
+        <h3 class="SaltoDePagina">DI HOLA A TODO LO QUE AMAS</h3>
     </div>
 </body>
 
