--- a/index.html
+++ b/index.html
@@ -5,30 +5,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <link rel="shortcut icon" href="img/logo.png"> -->
     <title>LAYFLIX</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <nav class="navMenu_navbar">
-        <input id="navMenu_nav-toggle" type="checkbox">
-        <div class="navMenu_logo">
-            <img src="img/logo.png" width="200px" alt="">
-        </div>
-        <ul class="navMenu_links">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Tendencias</a></li>
-            <li><a href="#">Link3</a></li>
-            <li><a href="#">Link4</a></li>
-        </ul>
-        <label for="navMenu_nav-toggle" class="navMenu_icon-burger">
-            <div class="navMenu_line"></div>
-            <div class="navMenu_line"></div>
-            <div class="navMenu_line"></div>
-        </label>
-    </nav>
     <div id='show_bg_2'>
-        <h3 class="SaltoDePagina">DI HOLA A TODO LO QUE AMAS</h3>
+        <nav class="navMenu_navbar">
+            <div class="navMenu_logo">
+                <img src="img/logo.png" width="200px" alt="">
+            </div>
+            <ul class="navMenu_links">
+                <button type="button" class="btn-login">Inicia Sesion</button>
+            </ul>
+        </nav>
+        <div class="slogan-navbar">
+            <h4>DI HOLA A TODO LO QUE AMAS</h4>
+            <p>Todas las películas y series que desees, y mucho más. Crea una cuenta y disfruta!</p>
+            <button type="button" class="btn-login">Unirse a Layflix</button>
+        </div>
+        <!-- <h3 class="SaltoDePagina">DI HOLA A TODO LO QUE AMAS</h3> -->
+    </div>
+    <div class="top-list">
+        <h1>Popular on Layflix</h1>
+        <div class="netflix-row">
+            <ul class="netflix-row--inner">
+                <li class="netflix-row--item"><img width="100%" src="img/top-list/pelicula1.jpg" alt=""></li>
+                <li class="netflix-row--item"><img width="100%" src="img/top-list/pelicula2.jpg" alt=""></li>
+                <li class="netflix-row--item"><img width="100%" src="img/top-list/pelicula3.jpg" alt=""></li>
+                <li class="netflix-row--item"><img width="100%" src="img/top-list/pelicula4.jpg" alt=""></li>
+                <li class="netflix-row--item"><img width="100%" src="img/top-list/pelicula5.jpg" alt=""></li>
+            </ul>
+        </div>
     </div>
 </body>
 
