--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
         <div class="netflix-row">
             <ul class="netflix-row--inner">
                 <li class="netflix-row--item"><img width="100%" src="img/top-list/pelicula1.jpg" alt=""></li>
-                <li class="netflix-row--item"><img width="100%" src="img/top-list/pelicula2.jpg" alt=""></li>
-                <li class="netflix-row--item"><img width="100%" src="img/top-list/pelicula3.jpg" alt=""></li>
-                <li class="netflix-row--item"><img width="100%" src="img/top-list/pelicula4.jpg" alt=""></li>
-                <li class="netflix-row--item"><img width="100%" src="img/top-list/pelicula5.jpg" alt=""></li>
+                <li class="netflix-row--item"><img width="100%" src="img/top-list/pelicula2.png" alt=""></li>
+                <li class="netflix-row--item"><img width="100%" src="img/top-list/pelicula3.png" alt=""></li>
+                <li class="netflix-row--item"><img width="100%" src="img/top-list/pelicula4.png" alt=""></li>
+                <li class="netflix-row--item"><img width="100%" src="img/top-list/pelicula5.png" alt=""></li>
             </ul>
         </div>
     </div>
