--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="shortcut icon" href="img/logo.png"> -->
     <title>LAYFLIX</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/styles_index.css">
 </head>
 
 <body>
@@ -17,15 +17,14 @@
                 <img src="img/logo.png" width="200px" alt="">
             </div>
             <ul class="navMenu_links">
-                <button type="button" class="btn-login">Inicia Sesion</button>
+                <button type="button" class="btn-login"><a href="./view/login.html">Iniciar Sesión</a></button>
             </ul>
         </nav>
         <div class="slogan-navbar">
             <h4>DI HOLA A TODO LO QUE AMAS</h4>
             <p>Todas las películas y series que desees, y mucho más. Crea una cuenta y disfruta!</p>
-            <button type="button" class="btn-login">Unirse a Layflix</button>
+            <button type="button" class="btn-login"><a href="./view/login.html">Unirse a Layflix</a></button>
         </div>
-        <!-- <h3 class="SaltoDePagina">DI HOLA A TODO LO QUE AMAS</h3> -->
     </div>
     <div class="top-list">
         <h1>Popular on Layflix</h1>
