--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id='show_bg_2'>
         <nav class="navMenu_navbar">
             <div class="navMenu_logo">
-                <img src="img/logo.png" width="200px" alt="">
+                <a href="./login.html"><img src="./img/logo.png" width="200px" alt=""></a>
             </div>
             <ul class="navMenu_links">
                 <button type="button" class="btn-login"><a href="./view/login.html">Iniciar Sesión</a></button>
