--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
         <div class="slogan-navbar">
             <h4>DI HOLA A TODO LO QUE AMAS</h4>
             <p>Todas las películas y series que desees, y mucho más. Crea una cuenta y disfruta!</p>
-            <button type="button" class="btn-login"><a href="./view/login.html">Unirse a Layflix</a></button>
+            <button type="button" class="btn-login"><a href="./view/registrar.html">Unirse a Layflix</a></button>
         </div>
     </div>
     <div class="top-list">
-        <h1>Popular on Layflix</h1>
+        <h1>On fire en Layflix</h1>
         <div class="netflix-row">
             <ul class="netflix-row--inner">
                 <li class="netflix-row--item"><img width="100%" src="img/top-list/pelicula1.jpg" alt=""></li>
@@ -37,6 +37,31 @@
                 <li class="netflix-row--item"><img width="100%" src="img/top-list/pelicula5.png" alt=""></li>
             </ul>
         </div>
+    </div>
+    <div class="catalogo">
+        <h1>Conoce nuestro catalogo</h1>
+        <!-- <div class="netflix-row">
+            <ul class="netflix-row--inner">
+                <li class="netflix-row--item"><img width="100%" src="img/top-list/pelicula1.jpg" alt=""></li>
+                <li class="netflix-row--item"><img width="100%" src="img/top-list/pelicula2.png" alt=""></li>
+                <li class="netflix-row--item"><img width="100%" src="img/top-list/pelicula3.png" alt=""></li>
+                <li class="netflix-row--item"><img width="100%" src="img/top-list/pelicula4.png" alt=""></li>
+                <li class="netflix-row--item"><img width="100%" src="img/top-list/pelicula5.png" alt=""></li>
+                <li class="netflix-row--item"><img width="100%" src="img/top-list/pelicula5.png" alt=""></li>
+                <li class="netflix-row--item"><img width="100%" src="img/top-list/pelicula5.png" alt=""></li>
+                <li class="netflix-row--item"><img width="100%" src="img/top-list/pelicula5.png" alt=""></li>
+
+            </ul>
+        </div>
+        <div class="netflix-row">
+            <ul class="netflix-row--inner">
+                <li class="netflix-row--item"><img width="100%" src="img/top-list/pelicula1.jpg" alt=""></li>
+                <li class="netflix-row--item"><img width="100%" src="img/top-list/pelicula2.png" alt=""></li>
+                <li class="netflix-row--item"><img width="100%" src="img/top-list/pelicula3.png" alt=""></li>
+                <li class="netflix-row--item"><img width="100%" src="img/top-list/pelicula4.png" alt=""></li>
+                <li class="netflix-row--item"><img width="100%" src="img/top-list/pelicula5.png" alt=""></li>
+            </ul>
+        </div> -->
     </div>
 </body>
 
