--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id='show_bg_2'>
         <nav class="navMenu_navbar">
             <div class="navMenu_logo">
-                <a href="./login.html"><img src="./img/logo.png" width="200px" alt=""></a>
+                <a href="./index.html"><img src="./img/logo.png" width="200px" alt=""></a>
             </div>
             <ul class="navMenu_links">
                 <button type="button" class="btn-login"><a href="./view/login.html">Iniciar Sesión</a></button>
@@ -40,28 +40,6 @@
     </div>
     <div class="catalogo">
         <h1>Conoce nuestro catalogo</h1>
-        <!-- <div class="netflix-row">
-            <ul class="netflix-row--inner">
-                <li class="netflix-row--item"><img width="100%" src="img/top-list/pelicula1.jpg" alt=""></li>
-                <li class="netflix-row--item"><img width="100%" src="img/top-list/pelicula2.png" alt=""></li>
-                <li class="netflix-row--item"><img width="100%" src="img/top-list/pelicula3.png" alt=""></li>
-                <li class="netflix-row--item"><img width="100%" src="img/top-list/pelicula4.png" alt=""></li>
-                <li class="netflix-row--item"><img width="100%" src="img/top-list/pelicula5.png" alt=""></li>
-                <li class="netflix-row--item"><img width="100%" src="img/top-list/pelicula5.png" alt=""></li>
-                <li class="netflix-row--item"><img width="100%" src="img/top-list/pelicula5.png" alt=""></li>
-                <li class="netflix-row--item"><img width="100%" src="img/top-list/pelicula5.png" alt=""></li>
-
-            </ul>
-        </div>
-        <div class="netflix-row">
-            <ul class="netflix-row--inner">
-                <li class="netflix-row--item"><img width="100%" src="img/top-list/pelicula1.jpg" alt=""></li>
-                <li class="netflix-row--item"><img width="100%" src="img/top-list/pelicula2.png" alt=""></li>
-                <li class="netflix-row--item"><img width="100%" src="img/top-list/pelicula3.png" alt=""></li>
-                <li class="netflix-row--item"><img width="100%" src="img/top-list/pelicula4.png" alt=""></li>
-                <li class="netflix-row--item"><img width="100%" src="img/top-list/pelicula5.png" alt=""></li>
-            </ul>
-        </div> -->
     </div>
 </body>
 
