--- a/subscribe/index_subscribe.html
+++ b/subscribe/index_subscribe.html
@@ -12,6 +12,9 @@
 
 <body>
     <div id='show_bg_2'>
+        <video autoplay muted loop id="myVideo">
+            <source src="../img/subscribe/trailer.mp4" type="video/mp4">
+        </video>
         <nav class="navMenu_navbar">
             <div class="navMenu_logo">
                 <a href=""><img src="../img/logo.png" width="200px" alt=""></a>
@@ -26,9 +29,13 @@
             </ul>
         </nav>
         <div class="desc-film">
-            <h3>Stranger Things</h3>
+            <!-- <h3>Stranger Things</h3> -->
+            <img width="250px" src="../img/subscribe/logo-film.png" alt="">
             <p>A raíz de la desaparicion de un niño, un pueblo desvela un misterio relacionado con experimentos secretos, fuerzas sobrenaturales aterradoras y una niña muy extraña.</p>
         </div>
+    </div>
+    <div>
+        <h1>Hola</h1>
     </div>
 </body>
 
