--- a/index.html
+++ b/index.html
@@ -26,20 +26,70 @@
             <button type="button" class="btn-login"><a href="./view/registrar.html">Unirse a Layflix</a></button>
         </div>
     </div>
-    <div class="top-list">
-        <h1>On fire en Layflix</h1>
-        <div class="netflix-row">
-            <ul class="netflix-row--inner">
-                <li class="netflix-row--item"><img width="100%" src="img/top-list/pelicula1.jpg" alt=""></li>
-                <li class="netflix-row--item"><img width="100%" src="img/top-list/pelicula2.png" alt=""></li>
-                <li class="netflix-row--item"><img width="100%" src="img/top-list/pelicula3.png" alt=""></li>
-                <li class="netflix-row--item"><img width="100%" src="img/top-list/pelicula4.png" alt=""></li>
-                <li class="netflix-row--item"><img width="100%" src="img/top-list/pelicula5.png" alt=""></li>
-            </ul>
+    <div class="contenido">
+        <div class="top-list">
+            <h1>On fire en Layflix</h1>
+            <div class="netflix-row">
+                <ul class="netflix-row--inner">
+                    <li class="netflix-row--item"><img width="100%" src="img/top-list/pelicula1.jpg" alt=""></li>
+                    <li class="netflix-row--item"><img width="100%" src="img/top-list/pelicula2.png" alt=""></li>
+                    <li class="netflix-row--item"><img width="100%" src="img/top-list/pelicula3.png" alt=""></li>
+                    <li class="netflix-row--item"><img width="100%" src="img/top-list/pelicula4.png" alt=""></li>
+                    <li class="netflix-row--item"><img width="100%" src="img/top-list/pelicula5.png" alt=""></li>
+                </ul>
+            </div>
         </div>
-    </div>
-    <div class="catalogo">
-        <h1>Conoce nuestro catalogo</h1>
+        <div class="catalogo">
+            <h1>Conoce nuestro catalogo</h1>
+            <div class="four-column">
+                <img src="img/top-list/pelicula1.jpg" alt="">
+            </div>
+            <div class="four-column">
+                <img src="img/top-list/pelicula1.jpg" alt="">
+            </div>
+            <div class="four-column">
+                <img src="img/top-list/pelicula1.jpg" alt="">
+            </div>
+            <div class="four-column">
+                <img src="img/top-list/pelicula1.jpg" alt="">
+            </div>
+            <div class="four-column">
+                <img src="img/top-list/pelicula1.jpg" alt="">
+            </div>
+            <div class="four-column">
+                <img src="img/top-list/pelicula1.jpg" alt="">
+            </div>
+            <div class="four-column">
+                <img src="img/top-list/pelicula1.jpg" alt="">
+            </div>
+            <div class="four-column">
+                <img src="img/top-list/pelicula1.jpg" alt="">
+            </div>
+            <div class="four-column">
+                <img src="img/top-list/pelicula1.jpg" alt="">
+            </div>
+            <div class="four-column">
+                <img src="img/top-list/pelicula1.jpg" alt="">
+            </div>
+            <div class="four-column">
+                <img src="img/top-list/pelicula1.jpg" alt="">
+            </div>
+            <div class="four-column">
+                <img src="img/top-list/pelicula1.jpg" alt="">
+            </div>
+            <div class="four-column">
+                <img src="img/top-list/pelicula1.jpg" alt="">
+            </div>
+            <div class="four-column">
+                <img src="img/top-list/pelicula1.jpg" alt="">
+            </div>
+            <div class="four-column">
+                <img src="img/top-list/pelicula1.jpg" alt="">
+            </div>
+            <div class="four-column">
+                <img src="img/top-list/pelicula1.jpg" alt="">
+            </div>
+        </div>
     </div>
 </body>
 
