--- a/subscribe/index_subscribe.html
+++ b/subscribe/index_subscribe.html
@@ -8,6 +8,8 @@
     <!-- <link rel="shortcut icon" href="img/logo.png"> -->
     <title>LAYFLIX</title>
     <link rel="stylesheet" href="../css/styles_subscribe.css">
+    <script src="https://kit.fontawesome.com/ddb7f94e9a.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
@@ -18,11 +20,11 @@
         <nav class="navMenu_navbar">
             <div class="navMenu_logo">
                 <a href=""><img src="../img/logo.png" width="200px" alt=""></a>
-                <li><a href="www.google.es">Inicio</a></li>
-                <li><a href="www.google.es">Destacadas</a></li>
-                <li><a href="www.google.es">Destacadas</a></li>
-                <li><a href="www.google.es">Destacadas</a></li>
-                <li><a href="www.google.es">Destacadas</a></li>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Destacadas</a></li>
+                <li><a href="#">Destacadas</a></li>
+                <li><a href="#">Destacadas</a></li>
+                <li><a href="#">Destacadas</a></li>
             </div>
             <ul class="navMenu_links">
                 <button type="button" class="btn-login"><a href="./view/login.html">Cerrar Sesión</a></button>
@@ -34,9 +36,14 @@
             <p>A raíz de la desaparicion de un niño, un pueblo desvela un misterio relacionado con experimentos secretos, fuerzas sobrenaturales aterradoras y una niña muy extraña.</p>
         </div>
     </div>
-    <div>
-        <h1>Hola</h1>
+    <div class="contenido">
+        <form class="search" action="">
+            <input type="search" placeholder="Search here..." required>
+            <button type="submit">Search</button>
+        </form>
     </div>
+    <script>
+    </script>
 </body>
 
 </html>
