--- a/subscribe/index_subscribe.html
+++ b/subscribe/index_subscribe.html
@@ -37,13 +37,10 @@
         </div>
     </div>
     <div class="contenido">
-        <form class="search" action="">
-            <input type="search" placeholder="Search here..." required>
-            <button type="submit">Search</button>
-        </form>
+        <div class="search__container">
+            <input class="search__input" type="text" placeholder="Search">
+        </div>
     </div>
-    <script>
-    </script>
 </body>
 
 </html>
