--- a/subscribe/index_subscribe.html
+++ b/subscribe/index_subscribe.html
@@ -13,34 +13,86 @@
 </head>
 
 <body>
-    <div id='show_bg_2'>
-        <video autoplay muted loop id="myVideo">
+    <video id="background-video" autoplay loop muted poster="../img/subscribe/black.jpg">
             <source src="../img/subscribe/trailer.mp4" type="video/mp4">
-        </video>
-        <nav class="navMenu_navbar">
-            <div class="navMenu_logo">
-                <a href=""><img src="../img/logo.png" width="200px" alt=""></a>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Destacadas</a></li>
-                <li><a href="#">Destacadas</a></li>
-                <li><a href="#">Destacadas</a></li>
-                <li><a href="#">Destacadas</a></li>
+          </video>
+    <nav class="navMenu_navbar">
+        <div class="navMenu_logo">
+            <a href=""><img src="../img/logo.png" width="200px" alt=""></a>
+            <li><a href="#">Inicio</a></li>
+            <li><a href="#">Destacadas</a></li>
+            <li><a href="#">Destacadas</a></li>
+            <li><a href="#">Destacadas</a></li>
+            <li><a href="#">Destacadas</a></li>
+        </div>
+        <ul class="navMenu_links">
+            <button type="button" class="btn-login"><a href="./view/login.html">Cerrar Sesión</a></button>
+        </ul>
+    </nav>
+    <div class="desc-film">
+        <!-- <h3>Stranger Things</h3> -->
+        <img width="250px" src="../img/subscribe/logo-film.png" alt="">
+        <p>A raíz de la desaparicion de un niño, un pueblo desvela un misterio relacionado con experimentos secretos, fuerzas sobrenaturales aterradoras y una niña muy extraña.</p>
+    </div>
+    <main>
+        <!-- <div class="search__container"> -->
+        <!-- <input class="search__input" type="text" placeholder="Search"> -->
+        <div class="contenido">
+            <div class="catalogo">
+                <h1>Conoce nuestro catalogo</h1>
+                <div class="four-column">
+                    <img src="../img/top-list/pelicula1.jpg" alt="">
+                </div>
+                <div class="four-column">
+                    <img src="../img/top-list/pelicula1.jpg" alt="">
+                </div>
+                <div class="four-column">
+                    <img src="../img/top-list/pelicula1.jpg" alt="">
+                </div>
+                <div class="four-column">
+                    <img src="../img/top-list/pelicula1.jpg" alt="">
+                </div>
+                <div class="four-column">
+                    <img src="../img/top-list/pelicula1.jpg" alt="">
+                </div>
+                <div class="four-column">
+                    <img src="../img/top-list/pelicula1.jpg" alt="">
+                </div>
+                <div class="four-column">
+                    <img src="../img/top-list/pelicula1.jpg" alt="">
+                </div>
+                <div class="four-column">
+                    <img src="../img/top-list/pelicula1.jpg" alt="">
+                </div>
+                <div class="four-column">
+                    <img src="../img/top-list/pelicula1.jpg" alt="">
+                </div>
+                <div class="four-column">
+                    <img src="../img/top-list/pelicula1.jpg" alt="">
+                </div>
+                <div class="four-column">
+                    <img src="../img/top-list/pelicula1.jpg" alt="">
+                </div>
+                <div class="four-column">
+                    <img src="../img/top-list/pelicula1.jpg" alt="">
+                </div>
+                <div class="four-column">
+                    <img src="../img/top-list/pelicula1.jpg" alt="">
+                </div>
+                <div class="four-column">
+                    <img src="../img/top-list/pelicula1.jpg" alt="">
+                </div>
+                <div class="four-column">
+                    <img src="../img/top-list/pelicula1.jpg" alt="">
+                </div>
+                <div class="four-column">
+                    <img src="../img/top-list/pelicula1.jpg" alt="">
+                </div>
             </div>
-            <ul class="navMenu_links">
-                <button type="button" class="btn-login"><a href="./view/login.html">Cerrar Sesión</a></button>
-            </ul>
-        </nav>
-        <div class="desc-film">
-            <!-- <h3>Stranger Things</h3> -->
-            <img width="250px" src="../img/subscribe/logo-film.png" alt="">
-            <p>A raíz de la desaparicion de un niño, un pueblo desvela un misterio relacionado con experimentos secretos, fuerzas sobrenaturales aterradoras y una niña muy extraña.</p>
         </div>
-    </div>
-    <div class="contenido">
-        <div class="search__container">
-            <input class="search__input" type="text" placeholder="Search">
-        </div>
-    </div>
+
+        <!-- </div> -->
+    </main>
 </body>
 
 </html>
