--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
     <div class="contenido">
         <div class="top-list">
-            <h1>On fire en Layflix</h1>
+            <h1>🔥 en Layflix</h1>
             <div class="netflix-row">
                 <ul class="netflix-row--inner">
                     <li class="netflix-row--item"><img width="100%" src="img/top-list/pelicula1.jpg" alt=""></li>
