--- a/subscribe/index_subscribe.html
+++ b/subscribe/index_subscribe.html
@@ -38,8 +38,20 @@
         <!-- <div class="search__container"> -->
         <!-- <input class="search__input" type="text" placeholder="Search"> -->
         <div class="contenido">
+            <div class="top-list">
+                <h4>🔥 en Layflix</h4>
+                <div class="netflix-row">
+                    <ul class="netflix-row--inner">
+                        <li class="netflix-row--item"><img width="100%" src="../img/top-list/pelicula1.jpg" alt=""></li>
+                        <li class="netflix-row--item"><img width="100%" src="../img/top-list/pelicula2.png" alt=""></li>
+                        <li class="netflix-row--item"><img width="100%" src="../img/top-list/pelicula3.png" alt=""></li>
+                        <li class="netflix-row--item"><img width="100%" src="../img/top-list/pelicula4.png" alt=""></li>
+                        <li class="netflix-row--item"><img width="100%" src="../img/top-list/pelicula5.png" alt=""></li>
+                    </ul>
+                </div>
+            </div>
             <div class="catalogo">
-                <h1>Conoce nuestro catalogo</h1>
+                <h4>Terrorificas 👻</h4>
                 <div class="four-column">
                     <img src="../img/top-list/pelicula1.jpg" alt="">
                 </div>
@@ -52,6 +64,7 @@
                 <div class="four-column">
                     <img src="../img/top-list/pelicula1.jpg" alt="">
                 </div>
+                <h4>Comedia 😂</h4>
                 <div class="four-column">
                     <img src="../img/top-list/pelicula1.jpg" alt="">
                 </div>
@@ -64,18 +77,7 @@
                 <div class="four-column">
                     <img src="../img/top-list/pelicula1.jpg" alt="">
                 </div>
-                <div class="four-column">
-                    <img src="../img/top-list/pelicula1.jpg" alt="">
-                </div>
-                <div class="four-column">
-                    <img src="../img/top-list/pelicula1.jpg" alt="">
-                </div>
-                <div class="four-column">
-                    <img src="../img/top-list/pelicula1.jpg" alt="">
-                </div>
-                <div class="four-column">
-                    <img src="../img/top-list/pelicula1.jpg" alt="">
-                </div>
+                <h4>Romanticas ❤️</h4>
                 <div class="four-column">
                     <img src="../img/top-list/pelicula1.jpg" alt="">
                 </div>
