--- a/subscribe/index_subscribe.html
+++ b/subscribe/index_subscribe.html
@@ -50,42 +50,126 @@
             <div class="catalogo">
                 <h4>Terrorificas 👻</h4>
                 <div class="four-column">
-                    <img src="../img/top-list/pelicula1.jpg" alt="">
+                    <div class="container">
+                        <img src="../img/top-list/pelicula1.jpg" alt="Avatar" class="image" style="width:100%">
+                        <div class="middle">
+                            <div class="text">
+                                <a href="#"><i class="fa-solid fa-thumbs-up"></i></a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="four-column">
-                    <img src="../img/top-list/pelicula1.jpg" alt="">
+                    <div class="container">
+                        <img src="../img/top-list/pelicula1.jpg" alt="Avatar" class="image" style="width:100%">
+                        <div class="middle">
+                            <div class="text">
+                                <a href="#"><i class="fa-solid fa-thumbs-up"></i></a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="four-column">
-                    <img src="../img/top-list/pelicula1.jpg" alt="">
+                    <div class="container">
+                        <img src="../img/top-list/pelicula1.jpg" alt="Avatar" class="image" style="width:100%">
+                        <div class="middle">
+                            <div class="text">
+                                <a href="#"><i class="fa-solid fa-thumbs-up"></i></a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="four-column">
-                    <img src="../img/top-list/pelicula1.jpg" alt="">
+                    <div class="container">
+                        <img src="../img/top-list/pelicula1.jpg" alt="Avatar" class="image" style="width:100%">
+                        <div class="middle">
+                            <div class="text">
+                                <a href="#"><i class="fa-solid fa-thumbs-up"></i></a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <h4>Comedia 😂</h4>
                 <div class="four-column">
-                    <img src="../img/top-list/pelicula1.jpg" alt="">
+                    <div class="container">
+                        <img src="../img/top-list/pelicula1.jpg" alt="Avatar" class="image" style="width:100%">
+                        <div class="middle">
+                            <div class="text">
+                                <a href="#"><i class="fa-solid fa-thumbs-up"></i></a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="four-column">
-                    <img src="../img/top-list/pelicula1.jpg" alt="">
+                    <div class="container">
+                        <img src="../img/top-list/pelicula1.jpg" alt="Avatar" class="image" style="width:100%">
+                        <div class="middle">
+                            <div class="text">
+                                <a href="#"><i class="fa-solid fa-thumbs-up"></i></a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="four-column">
-                    <img src="../img/top-list/pelicula1.jpg" alt="">
+                    <div class="container">
+                        <img src="../img/top-list/pelicula1.jpg" alt="Avatar" class="image" style="width:100%">
+                        <div class="middle">
+                            <div class="text">
+                                <a href="#"><i class="fa-solid fa-thumbs-up"></i></a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="four-column">
-                    <img src="../img/top-list/pelicula1.jpg" alt="">
+                    <div class="container">
+                        <img src="../img/top-list/pelicula1.jpg" alt="Avatar" class="image" style="width:100%">
+                        <div class="middle">
+                            <div class="text">
+                                <a href="#"><i class="fa-solid fa-thumbs-up"></i></a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <h4>Romanticas ❤️</h4>
                 <div class="four-column">
-                    <img src="../img/top-list/pelicula1.jpg" alt="">
+                    <div class="container">
+                        <img src="../img/top-list/pelicula1.jpg" alt="Avatar" class="image" style="width:100%">
+                        <div class="middle">
+                            <div class="text">
+                                <a href="#"><i class="fa-solid fa-thumbs-up"></i></a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="four-column">
-                    <img src="../img/top-list/pelicula1.jpg" alt="">
+                    <div class="container">
+                        <img src="../img/top-list/pelicula1.jpg" alt="Avatar" class="image" style="width:100%">
+                        <div class="middle">
+                            <div class="text">
+                                <a href="#"><i class="fa-solid fa-thumbs-up"></i></a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="four-column">
-                    <img src="../img/top-list/pelicula1.jpg" alt="">
+                    <div class="container">
+                        <img src="../img/top-list/pelicula1.jpg" alt="Avatar" class="image" style="width:100%">
+                        <div class="middle">
+                            <div class="text">
+                                <a href="#"><i class="fa-solid fa-thumbs-up"></i></a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="four-column">
-                    <img src="../img/top-list/pelicula1.jpg" alt="">
+                    <div class="container">
+                        <img src="../img/top-list/pelicula1.jpg" alt="Avatar" class="image" style="width:100%">
+                        <div class="middle">
+                            <div class="text">
+                                <a href="#"><i class="fa-solid fa-thumbs-up"></i></a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
