--- a/subscribe/index_subscribe.html
+++ b/subscribe/index_subscribe.html
@@ -26,7 +26,7 @@
             <li><a href="#">Destacadas</a></li>
         </div>
         <ul class="navMenu_links">
-            <button type="button" class="btn-login"><a href="./view/login.html">Cerrar Sesión</a></button>
+            <button type="button" class="btn-login"><a href="../view/login.html">Cerrar Sesión</a></button>
         </ul>
     </nav>
     <div class="desc-film">
@@ -131,6 +131,7 @@
                     </div>
                 </div>
                 <h4>Romanticas ❤️</h4>
+                <hr>
                 <div class="four-column">
                     <div class="container">
                         <img src="../img/top-list/pelicula1.jpg" alt="Avatar" class="image" style="width:100%">
