--- a/index.html
+++ b/index.html
@@ -43,51 +43,67 @@
             <h1>Conoce nuestro catalogo</h1>
             <div class="four-column">
                 <img src="img/top-list/pelicula1.jpg" alt="">
+                <p>Hola</p>
             </div>
             <div class="four-column">
                 <img src="img/top-list/pelicula1.jpg" alt="">
+                <p>Hola</p>
             </div>
             <div class="four-column">
                 <img src="img/top-list/pelicula1.jpg" alt="">
+                <p>Hola</p>
             </div>
             <div class="four-column">
                 <img src="img/top-list/pelicula1.jpg" alt="">
+                <p>Hola</p>
             </div>
             <div class="four-column">
                 <img src="img/top-list/pelicula1.jpg" alt="">
+                <p>Hola</p>
             </div>
             <div class="four-column">
                 <img src="img/top-list/pelicula1.jpg" alt="">
+                <p>Hola</p>
             </div>
             <div class="four-column">
                 <img src="img/top-list/pelicula1.jpg" alt="">
+                <p>Hola</p>
             </div>
             <div class="four-column">
                 <img src="img/top-list/pelicula1.jpg" alt="">
+                <p>Hola</p>
             </div>
             <div class="four-column">
                 <img src="img/top-list/pelicula1.jpg" alt="">
+                <p>Hola</p>
             </div>
             <div class="four-column">
                 <img src="img/top-list/pelicula1.jpg" alt="">
+                <p>Hola</p>
             </div>
             <div class="four-column">
                 <img src="img/top-list/pelicula1.jpg" alt="">
+                <p>Hola</p>
             </div>
             <div class="four-column">
                 <img src="img/top-list/pelicula1.jpg" alt="">
+                <p>Hola</p>
             </div>
             <div class="four-column">
                 <img src="img/top-list/pelicula1.jpg" alt="">
+                <p>Hola</p>
             </div>
             <div class="four-column">
                 <img src="img/top-list/pelicula1.jpg" alt="">
+                <p>Hola</p>
             </div>
             <div class="four-column">
                 <img src="img/top-list/pelicula1.jpg" alt="">
+                <p>Hola</p>
             </div>
             <div class="four-column">
                 <img src="img/top-list/pelicula1.jpg" alt="">
+                <p>Hola</p>
             </div>
         </div>
     </div>
