--- a/subscribe/index_subscribe.html
+++ b/subscribe/index_subscribe.html
@@ -45,6 +45,11 @@
                         <li class="netflix-row--item"><img width="100%" src="../img/top-list/pelicula3.png" alt=""></li>
                         <li class="netflix-row--item"><img width="100%" src="../img/top-list/pelicula4.png" alt=""></li>
                         <li class="netflix-row--item"><img width="100%" src="../img/top-list/pelicula5.png" alt=""></li>
+                        <li class="netflix-row--item"><img width="100%" src="../img/top-list/pelicula1.jpg" alt=""></li>
+                        <li class="netflix-row--item"><img width="100%" src="../img/top-list/pelicula2.png" alt=""></li>
+                        <li class="netflix-row--item"><img width="100%" src="../img/top-list/pelicula3.png" alt=""></li>
+                        <li class="netflix-row--item"><img width="100%" src="../img/top-list/pelicula4.png" alt=""></li>
+                        <li class="netflix-row--item"><img width="100%" src="../img/top-list/pelicula5.png" alt=""></li>
                     </ul>
                 </div>
             </div>
@@ -54,6 +59,7 @@
                 <div class="four-column">
                     <div class="container">
                         <img src="../img/top-list/pelicula1.jpg" alt="Avatar" class="image" style="width:100%">
+                        <p>Hola</p>
                         <div class="middle">
                             <div class="text">
                                 <a href="#"><i class="fa-solid fa-thumbs-up"></i></a>
@@ -64,6 +70,7 @@
                 <div class="four-column">
                     <div class="container">
                         <img src="../img/top-list/pelicula1.jpg" alt="Avatar" class="image" style="width:100%">
+                        <p>Hola</p>
                         <div class="middle">
                             <div class="text">
                                 <a href="#"><i class="fa-solid fa-thumbs-up"></i></a>
@@ -74,6 +81,7 @@
                 <div class="four-column">
                     <div class="container">
                         <img src="../img/top-list/pelicula1.jpg" alt="Avatar" class="image" style="width:100%">
+                        <p>Hola</p>
                         <div class="middle">
                             <div class="text">
                                 <a href="#"><i class="fa-solid fa-thumbs-up"></i></a>
@@ -84,6 +92,7 @@
                 <div class="four-column">
                     <div class="container">
                         <img src="../img/top-list/pelicula1.jpg" alt="Avatar" class="image" style="width:100%">
+                        <p>Hola</p>
                         <div class="middle">
                             <div class="text">
                                 <a href="#"><i class="fa-solid fa-thumbs-up"></i></a>
@@ -96,6 +105,7 @@
                 <div class="four-column">
                     <div class="container">
                         <img src="../img/top-list/pelicula1.jpg" alt="Avatar" class="image" style="width:100%">
+                        <p>Hola</p>
                         <div class="middle">
                             <div class="text">
                                 <a href="#"><i class="fa-solid fa-thumbs-up"></i></a>
@@ -106,6 +116,7 @@
                 <div class="four-column">
                     <div class="container">
                         <img src="../img/top-list/pelicula1.jpg" alt="Avatar" class="image" style="width:100%">
+                        <p>Hola</p>
                         <div class="middle">
                             <div class="text">
                                 <a href="#"><i class="fa-solid fa-thumbs-up"></i></a>
@@ -116,6 +127,7 @@
                 <div class="four-column">
                     <div class="container">
                         <img src="../img/top-list/pelicula1.jpg" alt="Avatar" class="image" style="width:100%">
+                        <p>Hola</p>
                         <div class="middle">
                             <div class="text">
                                 <a href="#"><i class="fa-solid fa-thumbs-up"></i></a>
@@ -126,6 +138,7 @@
                 <div class="four-column">
                     <div class="container">
                         <img src="../img/top-list/pelicula1.jpg" alt="Avatar" class="image" style="width:100%">
+                        <p>Hola</p>
                         <div class="middle">
                             <div class="text">
                                 <a href="#"><i class="fa-solid fa-thumbs-up"></i></a>
@@ -138,6 +151,7 @@
                 <div class="four-column">
                     <div class="container">
                         <img src="../img/top-list/pelicula1.jpg" alt="Avatar" class="image" style="width:100%">
+                        <p>Hola</p>
                         <div class="middle">
                             <div class="text">
                                 <a href="#"><i class="fa-solid fa-thumbs-up"></i></a>
@@ -148,6 +162,7 @@
                 <div class="four-column">
                     <div class="container">
                         <img src="../img/top-list/pelicula1.jpg" alt="Avatar" class="image" style="width:100%">
+                        <p>Hola</p>
                         <div class="middle">
                             <div class="text">
                                 <a href="#"><i class="fa-solid fa-thumbs-up"></i></a>
@@ -158,6 +173,7 @@
                 <div class="four-column">
                     <div class="container">
                         <img src="../img/top-list/pelicula1.jpg" alt="Avatar" class="image" style="width:100%">
+                        <p>Hola</p>
                         <div class="middle">
                             <div class="text">
                                 <a href="#"><i class="fa-solid fa-thumbs-up"></i></a>
@@ -168,6 +184,7 @@
                 <div class="four-column">
                     <div class="container">
                         <img src="../img/top-list/pelicula1.jpg" alt="Avatar" class="image" style="width:100%">
+                        <p>Hola</p>
                         <div class="middle">
                             <div class="text">
                                 <a href="#"><i class="fa-solid fa-thumbs-up"></i></a>
